--- a/ansible/roles/nginx/templates/default.j2
+++ b/ansible/roles/nginx/templates/default.j2
@@ -2,7 +2,7 @@ server {
         listen 80;
         listen [::]:80;
 
-        server_name *{{ domain }};
+        server_name {{ domain }};
 
         return 301 https://$server_name$request_uri;
 }
@@ -11,7 +11,7 @@ server {
         listen [::]:443 ssl;
         listen 443 ssl;
 
-        server_name {{ domain }} www.{{ domain }};
+        server_name {{ domain }};
 
         # Logging
         access_log /var/log/nginx/jenkins.access.log;
